fix section flavors : tools, rl; troll flavor bonus; merge candriam.yml

--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -29,7 +29,7 @@
 
     - title: TensorFlow et Deep Learning
       path: tf-keras
-      flavor: full-tp
+      flavor: bda
 
     - path: big-questions
       flavor: full
