--- a/orsys/dpl/targets.yml
+++ b/orsys/dpl/targets.yml
@@ -12,7 +12,7 @@
       path: supervised/classification
 
     - path: tf-keras
-      flavor: full-tp
+      flavor: bda
 
 - name: j2
   title: Jour 2 --- Traitement d'images et auto-encodeurs
@@ -39,6 +39,6 @@
       flavor: full
 
     - path: tools
-      flavor: detailed
+      flavor: devops
 
     - contact
