--- a/orsys/bda/targets.yml
+++ b/orsys/bda/targets.yml
@@ -36,7 +36,7 @@
       flavor: deep-intro
 
     - path: tf-keras
-      flavor: full-tp
+      flavor: bda
 
     - path: nn/cnn
       flavor: full
