fix section flavors :

--- a/eni/ml1/targets.yml
+++ b/eni/ml1/targets.yml
@@ -26,7 +26,7 @@
       flavor: mlcraftmyass
 
     - path: actors
-      flavor: full
+      flavor: gafa-startups
 
     - path: sectors
       flavor: full
