--- a/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
+++ b/orsys/INTRA/2020-09-nextflow-mlb-dnn/targets.yml
@@ -47,7 +47,7 @@
   title: Jour 5 --- Neurones et Séquences
   sections:
     - path: sequential-data
-      flavor: full
+      flavor: intra
 
     - path: nlp
       flavor: dpl
