minor changes to merge

--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -15,7 +15,7 @@ flavors:
     - playground
     - $cnn: demo
     - $rnn: demo
-    - $gan: light
+    - $gan: full
     - /questions
     - help-pointers
   deep-discover-demo-light:
