--- a/shared/latex/nn/ae/ae.yml
+++ b/shared/latex/nn/ae/ae.yml
@@ -2,11 +2,11 @@ default_titles:
   autoencoder: Présentation
   tp: Travaux Pratiques
 flavors:
-  full:
+  dpl:
     - autoencoder
     - /questions
     - tp
-  demo:
+  drn:
     - autoencoder
     - /questions
     - tp-demo
