--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,20 @@ version = "1.0.0"
 
 [tool.poetry.dependencies]
 Pygments = "^2.9.0"
-python = "^3.8"
-deckz = "^16.1.0"
+python = ">= 3.8, < 3.11"
+numpy = "^1.21.4"
+matplotlib = "^3.5.1"
+scikit-learn = "^1.0.1"
+deckz = "^16.2.0"
 
 [tool.poetry.dev-dependencies]
-black = "^21.6b0"
+black = "^21.12b0"
 flake8 = "^3.9.2"
+flake8-bugbear = "^21.4.3"
+flake8-docstrings = "^1.6.0"
+isort = "^5.9.1"
+mypy = "^0.812"
+pylint = "^2.8.2"
 
 [build-system]
 build-backend = "poetry.masonry.api"
