Transfer NVIDIA stock plot from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -1,11 +1,13 @@
 [tool.poetry]
 authors = ["mlambda <142691+m09@users.noreply.github.com>"]
 description = ""
+include = ["data/**/*"]
 name = "plots"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
 matplotlib = "^3.5.1"
+pandas = "^1.3.5"
 python = ">= 3.8, < 3.11"
 scikit-learn = "^1.0.1"
 
