--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -6,10 +6,11 @@ name = "plots"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-matplotlib = "^3.5.1"
+matplotlib = "^3.2.2"
 pandas = "^1.3.5"
-python = ">= 3.8, < 3.11"
+python = ">= 3.8, < 3.10"
 scikit-learn = "^1.0.1"
+tensorflow = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
