--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ version = "1.0.0"
 
 [tool.poetry.dependencies]
 Pygments = "^2.9.0"
-matplotlib = "^3.5.1"
+deckz = "^17.3.0"
+matplotlib = ">= 3, < 4"
 plots = {path = "figures/plt", develop = true}
-python = ">= 3.8, < 3.11"
-deckz = "^17.2.0"
+python = ">= 3.8, < 3.10"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
