--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.3.5"
 python = ">= 3.8, < 3.10"
 scikit-learn = "^1.0.1"
 tensorflow = "^2.7.0"
+Pillow = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
