--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -12,6 +12,7 @@ python = ">= 3.8, < 3.10"
 scikit-learn = "^1.0.1"
 tensorflow = "^2.7.0"
 Pillow = "^8.4.0"
+seaborn = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
