--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "^1.0.1"
 scipy = "^1.7.3"
 seaborn = "^0.11.2"
 tensorflow = "^2.7.0"
+wikipedia = "^1.4.0"
+wordcloud = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
