--- a/shared/tikz/optimization/vanishing-gradients.yml
+++ b/shared/tikz/optimization/vanishing-gradients.yml
@@ -1,3 +1,4 @@
 author: mlambda
 license: CC-BY-SA-4.0
 title: Le problème du gradient qui disparait (vanishing gradient)
+title_en: Vanishiong gradient problem
