Add data science stuff skeleton
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -41,6 +41,9 @@ flavors:
     - /python/regexes/regexes
     - /questions
     - /python/regexes/tp-regexes
+    - oop
+    - tp-oop
+    - /questions
     - exceptions
     - /questions
   no-tp:
@@ -64,6 +67,8 @@ flavors:
     - native-functions
     - /questions
     - /python/regexes/regexes
+    - /questions
+    - oop
     - /questions
     - exceptions
     - /questions
