Add OOP stuff to LPY
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/lpy/targets.yml
+++ b/sparks-formation/lpy/targets.yml
@@ -7,9 +7,9 @@
     - path: python/intro
       flavor: full
 
-- name: j2
-  title: Jour 2 --- Ingénierie
-  sections:
+    - path: python/basics
+      flavor: lpy
+
     - path: python/linting
       flavor: full
 
