--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -12,6 +12,37 @@ default_titles:
   variables: Types de base et variables
   /python/regexes/regexes: Expressions régulières
 flavors:
+  lpy:
+    - support
+    - variables
+    - /questions
+    - tp-variables
+    - display
+    - /questions
+    - tp-display
+    - intro-collections: Collections
+    - lists: null
+    - dictionaries: null
+    - tuples: null
+    - sets: null
+    - /questions
+    - tp-collections
+    - control-structures
+    - /questions
+    - tp-control-structures
+    - files
+    - /questions
+    - tp-files
+    - functions
+    - /questions
+    - tp-functions
+    - native-functions
+    - /questions
+    - oop
+    - /questions
+    - tp-oop
+    - exceptions
+    - /questions
   full:
     - support
     - variables
