Add title to OOP section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/basics.yml
+++ b/shared/latex/python/basics/basics.yml
@@ -7,6 +7,7 @@ default_titles:
   functions: Fonctions
   lists: Listes
   native-functions: Fonctions natives
+  oop: Programmation orientée objet
   support: Support de cours
   tuples: N-uplets
   variables: Types de base et variables
