--- a/shared/plt/mpl/classique-start.yml
+++ b/shared/plt/mpl/classique-start.yml
@@ -1,3 +1,3 @@
 author: mlambda
 license: CC-BY-SA-4.0
-title: Utilisation de \texttt{Figure} et \texttt{Axes} pour créer un plot et changement de la taille de figure.
+title: Utilisation de \texttt{plt.subplots} pour créer un plot et changement de la taille de figure.
