ajout slide tp pandas

--- a/shared/latex/python/data-science/data-science.yml
+++ b/shared/latex/python/data-science/data-science.yml
@@ -9,10 +9,12 @@ flavors:
     - numpy
     - /questions
     - tp-numpy
-    - pandas
     - /questions
     - matplotlib
     - /questions
     - tp-matplotlib
+    - pandas
+    - /questions
+    - tp-pandas
 
 title: Modules de science des données
