Add TESTIA targets
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/about/about.yml
+++ b/shared/latex/about/about.yml
@@ -48,5 +48,10 @@ flavors:
     - ressources-eni
     - horaires-3j-orsys
     - tour2table
+  sparks-formation-4j:
+    - formateur
+    - description
+    - ressources-eni
+    - horaires-4j-orsys
+    - tour2table
 title: Informations sur la formation
-version: 3
