--- a/sparks-formation/INTRA/2022-02-ec-nantes/targets.yml
+++ b/sparks-formation/INTRA/2022-02-ec-nantes/targets.yml
@@ -10,6 +10,9 @@
     - path: python/basics
       flavor: lpy
 
+- name: j2
+  title: Jour 2 --- Outils data science
+  sections:
     - path: python/data-science
       flavor: full
 
