--- a/shared/latex/python/production/production.yml
+++ b/shared/latex/python/production/production.yml
@@ -7,7 +7,7 @@ flavors:
   full:
     - environment
     - /questions
-    - tp-environment
+    - demo-environment
     - packaging
     - /questions
     - tp-packaging
@@ -19,7 +19,7 @@ flavors:
   light:
     - environment
     - /questions
-    - tp-environment
+    - demo-environment
     - packaging
     - /questions
     - tp-packaging
