add orsys/INTRA/2022-03-olea-medical;add nn vision-expert flavor skeleton

--- a/orsys/INTRA/2020-09-natixis/targets.yml
+++ b/orsys/INTRA/2020-09-natixis/targets.yml
@@ -36,6 +36,6 @@
       flavor: mle
 
     - path: nn/transformer
-      flavor: full
+      flavor: text
 
     - path: sequential-data/tp-tf-natixis
