--- a/shared/latex/nn/cnn/cnn.yml
+++ b/shared/latex/nn/cnn/cnn.yml
@@ -4,6 +4,7 @@ default_titles:
   interpret: Interpréter un modèle appris
   keras: Implémentation en Keras
   model: Modèle
+  modern-anomaly-detection: "Une méthode de détection d'anomalie moderne"
   modern-architectures: Architectures modernes
   tp: Travaux pratiques
   tp-demo: Démonstration
@@ -39,11 +40,11 @@ flavors:
     - demo-task
     - interpret
     - /questions
-    - modern-architectures
-    - /questions
     - keras
     - /questions
     - tp-demo
+    - modern-architectures
+    - modern-anomaly-detection
   dpl:
     - data
     - model
