--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -6,25 +6,25 @@ name = "plots"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-Pillow = "^8.4.0"
+Pillow = "^9.0.1"
 matplotlib = "^3.5.1"
-pandas = "^1.3.5"
+pandas = "^1.4.1"
 python = ">= 3.8, < 3.10"
-scikit-learn = "^1.0.1"
-scipy = "^1.7.3"
+scikit-learn = "^1.0.2"
+scipy = "^1.8.0"
 seaborn = "^0.11.2"
-tensorflow = "^2.7.0"
+tensorflow = "^2.8.0"
 wikipedia = "^1.4.0"
 wordcloud = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
-flake8 = "^3.9.2"
-flake8-bugbear = "^21.4.3"
+black = "^22.1.0"
+flake8 = "^4.0.1"
+flake8-bugbear = "^22.1.11"
 flake8-docstrings = "^1.6.0"
-isort = "^5.9.1"
-mypy = "^0.812"
-pylint = "^2.8.2"
+isort = "^5.10.1"
+mypy = "^0.940"
+pylint = "^2.12.2"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
