--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,19 @@ name = "slides"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
-Pygments = "^2.9.0"
+Pygments = "^2.11.2"
 plots = {path = "figures/plt", develop = true}
 python = ">= 3.8, < 3.10"
-deckz = "^18.1.1"
+deckz = "^18.1.3"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
-flake8 = "^3.9.2"
-flake8-bugbear = "^21.4.3"
+black = "^22.1.0"
+flake8 = "^4.0.1"
+flake8-bugbear = "^22.1.11"
 flake8-docstrings = "^1.6.0"
-isort = "^5.9.1"
-mypy = "^0.812"
-pylint = "^2.8.2"
+isort = "^5.10.1"
+mypy = "^0.940"
+pylint = "^2.12.2"
 
 [build-system]
 build-backend = "poetry.masonry.api"
