Add extras to NPY targets
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/npy/targets.yml
+++ b/sparks-formation/npy/targets.yml
@@ -16,4 +16,10 @@
     - path: python/production
       flavor: light
 
+    - path: python/sys-admin
+      flavor: full
+
+    - path: python/data-science
+      flavor: full
+
     - contact
