Put TF back into DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -109,7 +109,7 @@ flavors:
     - regularisation
     - playground
     - /questions
-    - $/tf-keras: bda
+    - $/tf-keras: dpl
     - $cnn: dpl
     - $ae: dpl
     - $gan: full
