--- a/shared/latex/tf-keras/tf-keras.yml
+++ b/shared/latex/tf-keras/tf-keras.yml
@@ -6,6 +6,13 @@ flavors:
     - keras
     - /questions
     - tp-keras
+  dpl:
+    - tf
+    - /questions
+    - tp-tf
+    - keras
+    - /questions
+    - tp-keras
   drn:
     - tf
     - /questions
