i don't know what i commit

--- a/shared/latex/nn/cnn/cnn.yml
+++ b/shared/latex/nn/cnn/cnn.yml
@@ -26,6 +26,8 @@ flavors:
     - /questions
     - modern-architectures
     - /questions
+    - interpret
+    - modern-anomaly-detection
     - demo-task
     - keras
     - /questions
