--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -42,7 +42,9 @@ flavors:
     - /questions
     - $/tf-keras: drn
     - $cnn: drn
+    - $transformer: image
     - $rnn: drn
+    - $transformer: drn
     - $ae: drn
     - $gan: full
     - help-pointers
