Mise à jour structure support DPL -- Suppression GAN + homogenisation transformeurs

--- a/shared/latex/nn/transformer/transformer.yml
+++ b/shared/latex/nn/transformer/transformer.yml
@@ -7,7 +7,7 @@ default_titles:
 flavors:
   text:
     - attention-model
-    - model
+    - transformer-cell
     - /questions
     - text-tp
   drn:
