add gradient-descent qq part :-)

--- a/shared/latex/nn/nn.yml
+++ b/shared/latex/nn/nn.yml
@@ -20,7 +20,9 @@ flavors:
     - help-pointers
   iao:
     - intro
+    - /supervised/classification
     - playground
+    - gradient-descent
     - optimize
     - deep-optimize
     - regularisation
