--- a/figures/plt/pyproject.toml
+++ b/figures/plt/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 Pillow = "^9.0.1"
 matplotlib = "^3.5.1"
 pandas = "^1.4.1"
-python = ">= 3.8, < 3.10"
+python = ">= 3.8, < 3.11"
 scikit-learn = "^1.0.2"
 scipy = "^1.8.0"
 seaborn = "^0.11.2"
@@ -17,7 +17,7 @@ tensorflow = "^2.8.0"
 wikipedia = "^1.4.0"
 wordcloud = "^1.8.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.1.0"
 flake8 = "^4.0.1"
 flake8-bugbear = "^22.1.11"
