--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ name = "slides"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
-Pygments = "^2.11.2"
+Pygments = "^2.13.0"
+deckz = "^18.1.5"
 plots = {path = "figures/plt", develop = true}
-python = ">= 3.8, < 3.10"
-deckz = "^18.1.3"
+python = ">= 3.8, < 3.11"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.1.0"
 flake8 = "^4.0.1"
 flake8-bugbear = "^22.1.11"
