Improve small things for MLB
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mlb/deck-config.yml
+++ b/orsys/mlb/deck-config.yml
@@ -1,2 +1,3 @@
 deck_acronym: MLB
-deck_title: "Machine Learning, M\xE9thodes et Solutions"
+deck_title: Machine Learning, Méthodes et Solutions
+toc_size: footnotesize
