Add skeleton for ENI 3 days computer vision
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/about/about.yml
+++ b/shared/latex/about/about.yml
@@ -30,6 +30,12 @@ flavors:
     - ressources-eni
     - horaires-1j-eni
     - tour2table
+  eni-3j:
+    - formateur
+    - description
+    - ressources-eni
+    - horaires-3j-eni
+    - tour2table
   eni-5j:
     - formateur
     - description
