Add 2 sections to cv3 targets
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/cv3/targets.yml
+++ b/eni/cv3/targets.yml
@@ -22,7 +22,13 @@
     - path: nn/transformer
       flavor: image
 
+    - path: engineering
+      flavor: mlcraftmyass
+
     - path: tools
       flavor: devops
+
+    - path: tools
+      flavor: demo-spark
 
     - contact
