Fix double title in cv3
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/cv3/targets.yml
+++ b/eni/cv3/targets.yml
@@ -31,7 +31,8 @@
     - path: tools
       flavor: devops
 
-    - path: tools
+    - title: Démonstration Spark
+      path: tools
       flavor: demo-spark
 
     - contact
