Use stegano lab instead of GHCLI lab as final lab of PAV
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/production/production.yml
+++ b/shared/latex/python/production/production.yml
@@ -15,7 +15,7 @@ flavors:
     - /questions
     - cli
     - /questions
-    - tp-cli
+    - tp-cli-stegano
   light:
     - environment
     - /questions
